# libcacard

./: .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  libcacard.pc.in
build-aux/: glib-tap.mk
src/: cac.c  cac.h  capcsc.c  capcsc.h  card_7816.c  card_7816.h  card_7816t.h  event.c  eventt.h  libcacard.h  libcacard.syms  link_test.c  vcard.c  vcard.h  vcard_emul.h  vcard_emul_nss.c  vcard_emul_type.c  vcard_emul_type.h  vcardt.h  vevent.h  vreader.c  vreader.h  vreadert.h  vscard_common.h  vscclient.c
tests/: libcacard.c
tests/db/: cert8.db  key3.db
